updategraph module created. base slimmed down, b/c SmartKeySource moves to table. tuplesource builds now with some fixes. rowset has its impl again, and RowSetShiftData has the methods I stripped out.